--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "ini": "tsc --init"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/koa": "^2.13.5",
     "@types/koa-bodyparser": "^4.3.7",
     "@types/koa-router": "^7.4.4",
     "dotenv": "^16.0.1",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^12.0.0",
